<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading1"
            android:background="@color/design_default_color_secondary"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/edtx4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content1"
            android:layout_below="@id/heading1"
            android:text="@string/edtx3"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading2"
            android:background="@color/design_default_color_secondary"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_below="@id/content1"
            android:text="@string/edtx5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/content1"
            android:id="@+id/content2"
            android:text="@string/edtx2"
            android:textSize="20dp"
            android:padding="70dp"
            />








    </RelativeLayout>








</ScrollView>